# mpl-candy-guard

./: .gitignore  Anchor.toml  Cargo.toml  README.md  lerna.json  package.json
.github/workflows/: code-formatting.yml  integration-test.yml  js-sdk.yml  sdk-candy-guard.yml  sdk-candy-machine-core.yml
docs/: index.html
docs/assets/: search.js
docs/classes/: AddressNotAuthorizedError.html  AddressNotFoundInAllowedListError.html  AfterEndDateError.html  AllocationGuardNotEnabledError.html  AllocationLimitReachedError.html  AllocationNotInitializedError.html  AllowListProof.html  AllowedListNotEnabledError.html  AllowedMintLimitReachedError.html  CandyGuard.html  CandyMachineEmptyError.html  CollectionKeyMismatchError.html  CollectionUpdateAuthorityKeyMismatchError.html  DataIncrementLimitExceededError.html  DeserializationErrorError.html  DuplicatedGroupLabelError.html  DuplicatedMintLimitIdError.html  ExceededLengthError.html  ExceededMaximumFreezePeriodError.html  ExceededProgramListSizeError.html  FreezeEscrow.html  FreezeEscrowAlreadyExistsError.html  FreezeGuardNotEnabledError.html  FreezeNotInitializedError.html  GatewayTokenInvalidError.html  GroupNotFoundError.html  IncorrectOwnerError.html  InstructionBuilderFailedError.html  InstructionNotFoundError.html  InvalidAccountSizeError.html  InvalidMintAuthorityError.html  InvalidMintTimeError.html  InvalidNftCollectionError.html  LabelExceededLengthError.html  MaximumRedeemedAmountError.html  MintCounter.html  MintNotLiveError.html  (+19 more)
js/: .ammanrc.js  .prettierrc.js  .solitarc.js  README.md  package.json  run-test.sh  tsconfig.json  typedoc.json
macro/: Cargo.toml
macro/src/: lib.rs
program/: Cargo.toml
program/src/: errors.rs  lib.rs  utils.rs
program/src/guards/: address_gate.rs  allocation.rs  allow_list.rs  bot_tax.rs  end_date.rs  freeze_sol_payment.rs  freeze_token_payment.rs  gatekeeper.rs  hydra.rs  lamports.rs  mint_limit.rs  mod.rs  nft_burn.rs  nft_gate.rs  nft_payment.rs  program_gate.rs  rate_limit.rs  redeemed_amount.rs  sol_payment.rs  spl_token.rs  start_date.rs  third_party_signer.rs  token_burn.rs  token_gate.rs  token_payment.rs
program/src/instructions/: dispatch.rs  initialize.rs  mint.rs  mint_v2.rs  mod.rs  route.rs  unwrap.rs  update.rs
program/src/state/: candy_guard.rs
programs/candy-guard/: Cargo.toml
programs/candy-guard/src/: errors.rs  lib.rs  utils.rs
programs/candy-guard/src/guards/: bot_tax.rs  lamports.rs  lamports_charge.rs  last_instruction.rs  live_date.rs  mod.rs  spltoken.rs  spltoken_charge.rs  third_party_signer.rs  whitelist.rs
programs/candy-guard/src/instructions/: initialize.rs  mint.rs  mod.rs  unwrap.rs  update.rs  wrap.rs
programs/candy-guard/src/state/: candy_guard.rs  mod.rs
programs/candy-machine/: Cargo.toml
programs/candy-machine/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/candy-machine/src/instructions/: add_collection.rs  add_config_lines.rs  initialize.rs  mint.rs  mod.rs  remove_collection.rs  set_authority.rs  set_collection.rs  update.rs
programs/candy-machine/src/state/: candy_machine.rs  candy_machine_data.rs  collection.rs  mod.rs
tests/: candy-guard.ts  candy-machine.ts  collection.ts  cpi.ts  helpers.ts  third-party-signer.ts  update.ts
(+297 files in other folders)
