[package]
name = "mpl-candy-guard-derive"
version = "0.1.0"
edition = "2021"
description = "Proc macro for automating ser/deser of Metaplex Candy guards."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-candy-guard"
license = "AGPL-3.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.98", features = ["extra-traits"] }
quote = "1.0.20"
