[package]
name = "mpl-candy-guard"
version = "0.1.0"
description = "Metaplex Candy Guard: programmatic access control for Candy Machine."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-candy-guard"
license = "AGPL-3.0"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
arrayref = "0.3.6"
mpl-candy-guard-derive = { path = "../macro" }
mpl-candy-machine-core = { version = "0.1.0", git = "https://github.com/metaplex-foundation/metaplex-program-library", branch = "stranzhay/read-api", features = ["cpi"] }
mpl-token-metadata = { version = "1.4.1", features = ["no-entrypoint"] }
solana-program = "1.10.29"
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
spl-token = { version = "~3.5.0", features = ["no-entrypoint"] }
solana-gateway = "0.2.2"
