[package]
name = "candy-guard"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "candy_guard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
candy-machine = { path = "../candy-machine", features = ["cpi"] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
solana-program = "1.9.13"
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
spl-token = "3.3.0"
