[package]
name = "candy-machine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "candy_machine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
arrayref = "0.3.6"
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
solana-program = "1.10.31"
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
